add evaluation and source root configuring